Fixing body overflow issue

--- a/static/scss/base/_main.scss
+++ b/static/scss/base/_main.scss
@@ -13,6 +13,7 @@
 
   body {
     background-image: none;
+    overflow-x: hidden;
   }
 
   sup {
